tests/fixtures/errors/ctor_custom_create_field.z
# E0300: a type with a custom `create` takes the create's params, not its
# fields -- passing the field name `tag` (not the create param `t`) is unknown.
Tally: class {
    tag: u64
} as {
    create: function {t: u64} out this is {
        return (meta.create tag: t)
    }
}
main: function is {
    x: Tally tag: 5
    print "\{x.tag}"
}
